--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,4 +7,4 @@ nav:
   - Home: index.md
   - Projects:
       - "Premier League Statistics Analysis (2021–2025)": projects/premier-league-stats-2021-2025-analysis.md
-      - "Second Project": projects/second-project.md
+      - "Aplication for Failure Prediction": projects/application_for_failure_prediction.md
