Update Premier League analysis project description

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,3 +8,4 @@ nav:
   - Projects:
       - "Premier League Statistics Analysis (2021–2025)": projects/premier-league-stats-2021-2025-analysis.md
       - "Aplication for Failure Prediction": projects/application_for_failure_prediction.md
+      - "AI Defect Detection": projects/ai_camera_detection_on_production_line.md
